accessibility and offline

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,8 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -148,7 +150,7 @@ nav h1 a {
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
+  display: inline-block;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
